--- a/shopmanager/templates/refunds/refund_products.html
+++ b/shopmanager/templates/refunds/refund_products.html
@@ -112,6 +112,7 @@
 									<td>商品简称</td>
 									<td>规格</td>
 									<td>数量</td>
+									<td>二次销售</td>
 									<td>操作</td>
 								</tr>
 							</thead>
@@ -158,6 +159,7 @@
 							<td style="width:150px;">商品标题</td>
 							<td>规格</td>
 							<td>数量</td>
+							<td>二次销售</td>
 							<td>退款日期</td>
 							<td>联系方式</td>
 							<td>退货物流</td>
