--- a/shopmanager/templates/related_orders_template.html
+++ b/shopmanager/templates/related_orders_template.html
@@ -64,7 +64,7 @@
 	        <td>商品外部编码</td>
 	        <td>商品图片</td>
 	        <td>商品名称</td>
-	        <td>组合商品销售数量</td>
+	        <td>关联商品销售数量</td>
 	        </thead>
 	        {% for item in object.order_items %}
 	            <tr >
