--- a/shopmanager/templates/trades/review_order_template.html
+++ b/shopmanager/templates/trades/review_order_template.html
@@ -173,7 +173,7 @@
 			</div>
 			<div class="row-through">
 				<div class="alert-message buyer"><strong>买家留言: </strong>{{ trade.buyer_message }}</div>
-				<div class="alert-message seller"><strong>卖家留言: </strong>{{ trade.seller_memo }}</div>
+				<div class="alert-message seller"><strong>卖家留言: </strong>{{ trade.seller_memo }}{{ trade.sys_memo }}</div>
 			</div>
 			<div>
 				<div id="id_express_content" class="accordion-inner1">
