--- a/shopmanager/templates/trades/tradepostsuccess.html
+++ b/shopmanager/templates/trades/tradepostsuccess.html
@@ -15,7 +15,7 @@
 		  	<legend>发货订单状态(共{{ trades|length }}单)</legend>
 			  <table class="table table-bordered table-striped table-condensed">
 			    <tr>
-			      <th>订单ID</th><th>淘宝订单编号</th><th>店铺名称</th><th>买家昵称</th><th>付款日期</th><th>发货状态</th>
+			      <th>订单ID</th><th>淘宝订单编号</th><th>店铺名称</th><th>买家昵称</th><th>快递名称</th><th>快递单号</th><th>发货状态</th>
 			    </tr>
 			    <tr><td colspan="6">发货成功的订单</td></tr>
 			    {% for trade in trades %}
@@ -25,7 +25,8 @@
 					<td>{{ trade.tid }}</td>
 					<td>{{ trade.seller_nick }}</td>
 			    	<td>{{ trade.buyer_nick }}</td>
-			    	<td>{{ trade.pay_time }}</td>
+			    	<td>{{ trade.company_name }}</td>
+			    	<td>{{ trade.out_sid }}</td>
 			    	<td><img src="{{ STATIC_URL }}admin/img/icon-yes.gif" alt="yes"></td>
 			    </tr>
 			    {% endif %}
@@ -38,7 +39,8 @@
 					<td>{{ trade.tid }}</td>
 					<td>{{ trade.seller_nick }}</td>
 			    	<td>{{ trade.buyer_nick }}</td>
-			    	<td>{{ trade.pay_time|date:'Y-m-d H:i:s' }}</td>
+			    	<td>{{ trade.company_name }}</td>
+			    	<td>{{ trade.out_sid }}</td>
 			    	<td><img src="{{ STATIC_URL }}admin/img/icon-no.gif" alt="no"></td>
 			    </tr>
 			    {% endif %}
