fix trade base.js

--- a/shopmanager/templates/admin/refunds/change_list.html
+++ b/shopmanager/templates/admin/refunds/change_list.html
@@ -56,6 +56,11 @@
       {% if has_add_permission %}
         <ul class="object-tools">
           {% block object-tools-items %}
+          	<li>
+              <a href="/refunds/manager/" class="addlink" target="_blank">
+                退货单管理
+              </a>
+            </li>
             <li>
               <a href="/refunds/product/add/" class="addlink" target="_blank">
                 新退货商品单
