--- a/shopmanager/templates/refunds/refund_manager.html
+++ b/shopmanager/templates/refunds/refund_manager.html
@@ -3,20 +3,18 @@
 <head>
 	<title>退货单管理</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-     <link href="{{ STATIC_URL }}bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
+    <link href="{{ STATIC_URL }}bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
     <link href="{{ STATIC_URL }}bootstrap/css/bootstrap-responsive.min.css" rel="stylesheet" type="text/css" />
     <link href="{{ STATIC_URL }}css/base.less" rel="stylesheet/less" type="text/css" />
-    <link rel="stylesheet" href="http://code.jquery.com/ui/1.10.1/themes/base/jquery-ui.css" />
-	<script src="http://code.jquery.com/jquery-1.9.1.js"></script>
-	<script src="http://code.jquery.com/ui/1.10.1/jquery-ui.js"></script>
-    <style type="text/css">
-		*{ margin:0; padding:0;}
-		ul li { 
-			list-style:none; 
-			display:inline; 
-			float:left; 
-			margin-left:40px;  
-			margin-top:30px;
+    <link href="{{ STATIC_URL }}css/admin/dialog.css" rel="stylesheet" type="text/css" />
+	<script src="{{ STATIC_URL }}closure-library/closure/goog/base.js"></script>
+     <style type="text/css">
+     	body,div{
+    	margin:0px auto;
+    	padding:0px;
+	    }
+		body{
+			background-image: url({{ STATIC_URL }}img/bluewhite.jpg);
 		}
 		input{
 			width:120px;
@@ -26,13 +24,19 @@
 		}
 		td {
 			word-break:break-all; 
-			max-width:120px;
-			max-height:20px; 
-			overflow:hidden;
-			color:#08C;
 		}
-		td textarea {
-			margin:0; padding:0;
+		td {
+			margin:5px; padding:5px;
+		}
+		.container table{ 
+			table-layout:fixed;
+		}
+		.container table td{text-overflow:ellipsis;overflow: hidden;white-space:nowrap;word-break:keep-all; }
+		.map-content {
+			background-image: url({{ STATIC_URL }}img/bluewhite.jpg);
+			line-height: 1.5em;
+        	font-family:"微软雅黑","黑体","宋体";
+      		font-size:12px;
 		}
 	</style>
 </head>
@@ -41,16 +45,18 @@
 	<div class="container">
 		<div id="post-items" style="display:block;">
 		  <fieldset>
-		  	<legend>退货单列表</legend>
+		  	<legend><h1 class="head-title" >退货单列表</h1></legend>
 			  <table class="table table-bordered table-striped table-condensed">
 			    <tr>
-			      <th>买家昵称</th><th>卖家昵称</th><th>退货单数</th><th>创建日期</th><th>退回快递</th><th>快递单号</th><th>已处理</th><th>退款状态</th><th>天猫介入</th><th>原因</th><th>描述</th>
+			      <td>序号</td><th>买家昵称</th><th>卖家昵称</th><th>退货单数</th><th>创建日期</th><th>退回快递</th><th>快递单号</th><th>已处理</th><th>退款状态</th><th>天猫介入</th><th>原因</th><th>描述</th>
 			    </tr>
 			    {% for key,trade in refund_trades.items %}
 			    <tr>
-			    	<td>{{ trade.buyer_nick }}</td>
+			    	<td>{{ forloop.counter }}</td>
+			    	<td><a href="javascript:void(0);" class="check-refund-order" style="cursor:pointer;" tid="{{ trade.tid }}">
+			    		{{ trade.buyer_nick }}</a></td>
 			    	<td>{{ trade.seller_nick }}</td>
-			    	<td>{{ trade.order_num }}</td>
+			    	<td>{{ trade.order_num }}<a></a></td>
 			    	<td>{{ trade.created }}</td>
 			    	<td>{{ trade.company_name }}</td>
 			    	<td>{{ trade.sid }}</td>
@@ -59,7 +65,7 @@
 			    	<td>{{ trade.status }}</td>
 			    	<td>{{ trade.cs_status }}</td>
 			    	<td>{{ trade.reason }}</td>
-			    	<td><textarea rows="2" cols="10">{{ trade.desc }}</textarea></td>
+			    	<td>{{ trade.desc }}</td>
 			    </tr>
 			    {% endfor %}	
 			  </table>
@@ -68,4 +74,8 @@
 	</div>	
 	{% endwith %}
 </body>
+<script src="{{ STATIC_URL }}script/refund/checkrefund.js"></script>
+<script type="text/javascript">
+	 new checkrefund.Manager();
+</script>
 </html>
