fix syncnum tasks

--- a/shopmanager/templates/refunds/refund_manager.html
+++ b/shopmanager/templates/refunds/refund_manager.html
@@ -31,10 +31,10 @@
 		}
 		.container table td{text-overflow:ellipsis;overflow: hidden;white-space:nowrap;word-break:keep-all; }
 		.map-content {
-
-			line-height: 1.5em;
-        	font-family:"微软雅黑","黑体","宋体";
-      		font-size:12px;
+			font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+		    font-size: 13px;
+		    line-height: 18px;
+		    color: #333;
 		}
 	</style>
 </head>
