--- a/shopmanager/templates/refunds/refund_order_product.html
+++ b/shopmanager/templates/refunds/refund_order_product.html
@@ -2,6 +2,7 @@
 {% load trade_tags %}
 <div class="map-content" style="margin-left: auto; margin-right: auto; width: 800px">
 	<div>
+		<div ><label>买家昵称:</label>{{ trade.buyer_nick }}<label>收货人:</label>{{ trade.receiver_name }}</div>
 		<div class="order-head"><h3 class="head-title">退货单列表</h3></div>
 		<div class="order-content">
 			<table class="table table-bordered table-striped table-condensed">
