--- a/shopmanager/templates/refunds/refund_manager.html
+++ b/shopmanager/templates/refunds/refund_manager.html
@@ -36,6 +36,15 @@
 		    line-height: 18px;
 		    color: #333;
 		}
+		.order-userinfo {
+			display:inline;
+			margin:0 60px;
+			font-size:20px;
+		}
+		label{
+			display:inline;
+			margin:0 20px;
+		}
 	</style>
 </head>
 <body>
