--- a/shopmanager/templates/items/productitemspage.html
+++ b/shopmanager/templates/items/productitemspage.html
@@ -8,7 +8,7 @@
 <div class='list_top'>
 
 <div id="id-csrftoken">{% csrf_token %}</div>
-
+{% load item_extras %}
 <div>
 <table class="table table-bordered table-striped table-condensed">
   <tr>
@@ -23,21 +23,21 @@
   		{% if forloop.first %}
   		<td rowspan="{{ sku_len }}">{{ forloop.parentloop.counter }}</td>
   		<td rowspan="{{ sku_len }}" ><img src="{{ item.pic_url }}" width="60px" heigth="60px"/></td>
-  		<td rowspan="{{ sku_len }}" class="click_title"><a href="#">{{ item.num_iid }}</a></td>
-  		<td rowspan="{{ sku_len }}" class="click_title"><a href="#">{{ item.user.nick }}</a></td>
-  		<td rowspan="{{ sku_len }}" class="click_title"><a href="#">{{ item.title }}</a></td>
+  		<td rowspan="{{ sku_len }}" >{{ item.num_iid }}</td>
+  		<td rowspan="{{ sku_len }}" >{{ item.user.nick }}</td>
+  		<td rowspan="{{ sku_len }}" class="click_title"><a href="{{ item.detail_url }}" target="_blank">{{ item.title }}</a></td>
   		<td rowspan="{{ sku_len }}">{{ item.price }}</td>
   		<td rowspan="{{ sku_len }}">{{ item.num }}</td>
   		<td rowspan="{{ sku_len }}">{{ item.list_time }}</td>
-  		<td rowspan="{{ sku_len }}">{% if item.approve_status == 'onsale' %}<a class="btn btn-small btn-success" style="display:block;"><i class="icon-ok"></i>在售</a>
-  			{% else %}<a class="btn btn-small btn-warning" style="display:block;"><i class="icon-move icon-white"></i>下架</a>{%endif%}</td>
+  		<td rowspan="{{ sku_len }}">{% if item.approve_status == 'onsale' %}<a class="badge badge-success" style="display:block;"><i class="icon-ok"></i>在售</a>
+  			{% else %}<a class="badge" style="display:block;"><i class="icon-move icon-white"></i>下架</a>{%endif%}</td>
   		{% endif %}
   		<td>{{ sku.outer_id }}</td>
-  		<td>{{ sku.properties_name }}</td>
+  		<td>{{ sku|get_sku_name:item.outer_id }}</td>
   		<td>{{ sku.quantity }}</td>
   		<td>{{ sku.price }}</td>
-  		<td >{% if sku.status == "normal" %}<a class="btn btn-small btn-success" style="display:block;"><i class="icon-ok"></i>在售</a>
-  			{% else %}<a class="btn btn-small btn-warning" style="display:block;"><i class="icon-move icon-white"></i>下架</a>{%endif%}</td>
+  		<td >{% if sku.status == "normal" %}<a class="badge badge-success" style="display:block;"><i class="icon-ok"></i>在售</a>
+  			{% else %}<a class="badge" style="display:block;"><i class="icon-move icon-white"></i>下架</a>{%endif%}</td>
   		</tr>
   	{% endfor %}
  	{% endwith %}
@@ -45,14 +45,14 @@
   		<tr>
   		<td >{{ forloop.counter }}</td>
   		<td ><img src="{{ item.pic_url }}" width="60px" heigth="60px"/></td>
-  		<td class="item_info"><a href="#">{{ item.num_iid }}</a></td>
-  		<td class="item_info"><a href="#">{{ item.user.nick }}</a></td>
-  		<td class="item_info"><a href="#">{{ item.title }}</a></td>
+  		<td >{{ item.num_iid }}</td>
+  		<td >{{ item.user.nick }}</td>
+  		<td class="item_info"><a href="{{ item.detail_url }}" target="_blank">{{ item.title }}</a></td>
   		<td >{{ item.price }}</td>
   		<td >{{ item.num }}</td>
   		<td >{{ item.list_time }}</td>
-  		<td >{% if item.approve_status == 'onsale' %}<a class="btn btn-small btn-info" style="display:block;"><i class="icon-ok"></i>在售</a>
-  			{% else %}<a class="btn btn-small btn-warning" style="display:block;"><i class="icon-move"></i>下架</a>{%endif%}</td>
+  		<td >{% if item.approve_status == 'onsale' %}<a class="badge badge-success" style="display:block;"><i class="icon-ok"></i>在售</a>
+  			{% else %}<a class="badge" style="display:block;"><i class="icon-move"></i>下架</a>{%endif%}</td>
   		<td colspan="5">该商品没有设置销售属性</td>
   		</tr>
   	{% endif %}
