--- a/shopmanager/site_media/static/css/admin/dialog.css
+++ b/shopmanager/site_media/static/css/admin/dialog.css
@@ -72,18 +72,20 @@
 }
 
 .memo_label {
-  margin: 5px 0px; 
+  margin-right:10px; 
   display: inline-block; 
-  width: 49%;
-  height:20px;
-  background-color:rgba(82, 168, 236, 0.8);
+
 }
 
 .buyer_message_label,.seller_message_label{
-  margin: 0px; 
   display: inline-block; 
-  width: 98%;
-  background-color:rgba(246, 167,222, 0.8);
+  padding: 8px 35px 8px 14px;
+  margin-bottom: 5px;
+  text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);
+  border: 1px solid #FBEED5;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  border-radius: 4px;
 }
 
 .icon-tags  {
