--- a/shopmanager/templates/items/productupdate.html
+++ b/shopmanager/templates/items/productupdate.html
@@ -5,122 +5,90 @@
 {% block navbar %}<div style="margin-top:30px"></div>{% endblock %}
 
 {% block container %}
-<div class='list_top'>
+<div class='list_top' style="width:800px;height:800px;">
 
 <div class="left-field">
 	<fieldset>
 		<legend>产品信息列表</legend>
-		<form class="form-horizontal" action="" >
+		<form id="id_product_form" action="" >
 			<div id="id-csrftoken">{% csrf_token %}</div>
-			<div class="control-group">
-				<label class="control-label" for="name">商家编码:</label>
-				<div class="controls">
+			<div>
+				<div class="sample-item">
+					<label class="" for="name">商家编码:</label>
 					<input id="outer_id" name="outer_id" type="text" value="{{ object.outer_id }}" disabled="disabled"/>
 				</div>
-			</div>
-			<div class="control-group">
-				<label class="control-label" for="name">商品简称:</label>
-				<div class="controls">
+				<div class="sample-item">
+					<label class="" for="name">商品简称:</label>
 					<input id="name" name="name" type="text" value="{{ object.name }}" />
 				</div>
-			</div>
-			<div class="control-group">
-				<label class="control-label" for="purchase">对应采购产品:</label>
-				<div class="controls">
-					<input id="purchase_product" name="purchase_product" type="select" value="{{ object.purchase_product.name }}" />
-				</div>
-			</div>
-			<div class="control-group">
-				<label class="control-label"  for="category">内部分类:</label>
-				<div class="controls">
+				<div class="sample-item">
+					<label class=""  for="category">内部分类:</label>
 					<input id="category" name="category" type="text" disabled="disabled" value="{{ object.category.name }}" />
-					</div>
-			</div>
-			<div class="control-group">
-				<label class="control-label"  for="collect">库存数:</label>
-				<div class="controls">
-					<input id="collect_num" name="collect_num" type="text" value="{{ object.collect_num }}" {% if object.prod_skus %}disabled="disabled"{% endif %} />
 				</div>
 			</div>
-			<div class="control-group">
-				<label class="control-label"  for="warn">警告库位:</label>
-				<div class="controls">
-					<input id="warn_num" name="warn_num" type="text" value="{{ object.warn_num }}" {% if object.prod_skus %}disabled="disabled"{% endif %}/>
-					</div>
-			</div>
-			<div class="control-group">
-				<label class="control-label"  for="remain">保留库存:</label>
-				<div class="controls">
-					<input id="remain_num" name="remain_num" type="text" value="{{ object.remain_num }}" {% if object.prod_skus %}disabled="disabled"{% endif %}/>
+			<div>
+				<div class="sample-item">
+					<label class=""  for="collect">库存数量:</label>
+					<input id="collect_num" name="collect_num" type="text" value="{{ object.collect_num }}" {% if object.pskus %}disabled="disabled"{% endif %} />
+				</div>
+				<div class="sample-item">
+					<label class=""  for="remain">预留库位:</label>
+					<input id="remain_num" name="remain_num" type="text" value="{{ object.remain_num }}" {% if object.pskus %}disabled="disabled"{% endif %}/>
 				</div>
 			</div>
-			<div class="control-group">
-				<label class="control-label"  for="price">参考价格:</label>
-				<div class="controls">
-					<input id="price" name="price" type="text" value="{{ object.price }}" />
-				</div>
+			<div>
+			<div class="sample-item">
+				<label class=""  for="syncstock">库存同步:</label>
+				<input id="sync_stock" name="sync_stock" type="checkbox" {% if object.sync_stock %}checked="yes"{% endif %} />
 			</div>
-			<div class="control-group">
-				<label class="control-label"  for="syncstock">库存同步:</label>
-				<div class="controls">
-					<input id="sync_stock" name="sync_stock" type="checkbox" {% if object.sync_stock %}checked="yes"{% endif %} />
-				</div>
+			<div class="sample-item">
+				<label class=""  for="outstock">商品拆分:</label>
+				<input id="is_split" name="is_split" type="checkbox" {% if object.is_split %}checked="yes"{% endif %} />
 			</div>
-			<div class="control-group">
-				<label class="control-label"  for="outstock">缺货:</label>
-				<div class="controls">
-					<input id="out_stock" name="out_stock" type="checkbox" {% if object.out_stock %}checked="yes"{% endif %} />
-				</div>
+			<div class="sample-item">
+				<label class=""  for="outstock">商品匹配:</label>
+				<input id="is_match" name="is_match" type="checkbox" {% if object.is_match %}checked="yes"{% endif %} />
 			</div>
-			<div class="control-group">
-				<label class="control-label"  for="assign">库位警告:</label>
-				<div class="controls">
-					<input id="is_assign" name="is_assign" type="checkbox" {% if object.is_assign %}checked="yes"{% endif %} />
-				</div>
+			<div class="sample-item">
+				<label class=""  for="assign">警告解除:</label>
+				<input id="is_assign" name="is_assign" type="checkbox" {% if object.is_assign %}checked="yes"{% endif %} />
 			</div>
-			<div class="control-group">
-				<label class="control-label"  for="status">产品状态:</label>
-				<div class="controls">
-					<select id="status" name="status">
-						<option value="normal" {% if object.status == 'normal'%}selected{% endif %}>使用</option>
-						<option value="remain" {% if object.status == 'remain'%}selected{% endif %}>待用</option>
-						<option value="delete" {% if object.status == 'delete'%}selected{% endif %}>作废</option>
-					</select>
-				</div>
-			</div>
-			<div class="control-group">
-				<div class="controls">
-					<button type="submit" class="btn">保存</button>
-				</div>
 			</div>
 		</form>
 	</fieldset>
 </div>
-<div class="right-field">
+<div class="right-field" >
 	<fieldset>
 		<legend>产品销售属性列表</legend>
-		{% if object.prod_skus %}
-		<table class="table table-bordered table-striped table-condensed">
+		{% if object.pskus %}
+		<table class="table table-bordered table-condensed">
 			<thead>
-		 	 	<th>销售编码</th><th style="width:150px;">采购属性</th><th style="width:50px;">库存</th><th style="width:10px;">警告库位</th>
-		 	 	<th style="width:20px;">保留库位</th><th style="width:240px;">属性名</th>
-		 	 	<th style="width:10px;">缺货</th><th style="width:10px;">同步</th><th style="width:10px;">库位警告</th>
-		 	 	<th style="width:30px;">状态</th><th>操作</th>
+		 	 	<th style="width:10px;"><input type="checkbox" /></th>
+		 	 	<th>销售编码</th>
+		 	 	<th style="width:240px;">属性名</th>
+		 	 	<th >库存数量</th>
+		 	 	<th >警告库位</th>
+		 	 	<th >保留库位</th>
+		 	 	<th >同步</th>
+		 	 	<th >拆分</th>
+		 	 	<th >匹配</th>
+		 	 	<th >状态</th>
+		 	 	<th>操作</th>
 			</thead>
-			{% for sku in object.prod_skus %}
-			<tr>
+			{% for sku in object.pskus %}
+			<tr class="{% if sku.is_stock_warn %}{% if sku.is_assign %}label-info{% else %}label-important{% endif %}{% elif sku.is_warning %}label-warning{% endif %}">
+			<td><input type="checkbox" pid="{{ sku.id }}" /></td>
 			<td>{{ sku.outer_id }}</td>
-			<td class="warp_title">{{ sku.purchase_product_sku.properties }}</td>
-			<td>{{ sku.quantity }}</td>
-			<td>{{ sku.warn_num }}</td>
-			<td>{{ sku.remain_num }}</td>
 			<td class="warp_title">{{ sku.properties_name }}</td>
-			<td><input type="checkbox" id="out_stock" name="out_stock" {% if sku.out_stock %}checked="yes"{% endif %} onclick= "return false" /></td>
-			<td><input type="checkbox" id="sync_stock" name="sync_stock" {% if sku.sync_stock %}checked="yes"{% endif %} onclick= "return false" /></td>
-			<td><input type="checkbox" id="is_assign" name="is_assign" {% if sku.is_assign %}checked="yes"{% endif %} onclick= "return false" /></td>
-			<td>
-			 	{% if sku.status == 'normal' %}使用{% elif sku.status == 'remain' %}待用{% else %}作废{% endif %}
-			</td>
+			<td><input type="text" value="{{ sku.quantity }}" /></td>
+			<td>{{ sku.warn_num }}</td>
+			<td><input type="text" value="{{ sku.remain_num }}" /></td>
+			<td><input type="checkbox" id="id_sync_stock"  {% if sku.sync_stock %}checked="yes"{% endif %} onclick= "return false" /></td>
+			<td><input type="checkbox" id="id_is_split" " {% if sku.is_split %}checked="yes"{% endif %} onclick= "return false" /></td>
+			<td><input type="checkbox" id="id_is_match"  {% if sku.is_match %}checked="yes"{% endif %} onclick= "return false" /></td>
+			<td >{% if sku.status == 'normal' %}<a class="badge badge-success" style="display:block;"><i class="icon-ok"></i>在售</a>
+  				{% elif sku.status == 'remain' %}<a class="badge badge-info" style="display:block;"><i class="icon-move"></i>待用</a>
+  				{% else %}<a class="badge" style="display:block;"><i class="icon-remove"></i>作废</a>{% endif %}</td>
 			<td><a prod_sku_id="{{ sku.id }}" class="update_sku"  title="修改"><i class="icon-edit"></i></a></td>
 			</tr>	
 			{% endfor %}
@@ -130,14 +98,6 @@
 		{% endif %}
 	</fieldset>
 </div>
-<div id="product_sku_modify" class="product_sku_modify" node-type="outer" style="z-index: 9999; display:block; ">
-</div>
 </div>
 
-{% endblock %}
-
-{% block delayed_script %}
-  <script type="text/javascript">
-      $(".update_sku").click(product_sku_modify_layer);
-  </script>
 {% endblock %}
