--- a/shopmanager/templates/refunds/refund_order_product.html
+++ b/shopmanager/templates/refunds/refund_order_product.html
@@ -3,8 +3,8 @@
 <div class="map-content" style="margin-left: auto; margin-right: auto; width: 800px">
 	<div>
 		<div class="well well-small">
-			<div class="order-userinfo" style="float:left;"><label class="label label-success">买家昵称:</label>{{ trade.buyer_nick }}</div>
-			<div class="order-userinfo" style="float:right;"><label class="label label-success">收货人:</label>{{ trade.receiver_name }}</div>
+			<div class="order-userinfo" ><label class="label label-success">买家昵称:</label>{{ trade.buyer_nick }}</div>
+			<div class="order-userinfo" ><label class="label label-success">收货人:</label>{{ trade.receiver_name }}</div>
 		</div>
 		<div class="order-head"><h3 class="head-title">退货单列表</h3></div>
 		<div class="order-content">
