--- a/shopmanager/templates/trades/check_order_template.html
+++ b/shopmanager/templates/trades/check_order_template.html
@@ -39,7 +39,6 @@
 </div>
 <div class="accordion-group1">
 <div class="accordion-heading1">
-<div style="padding: 2px 15px">
 <div class="row-through">
 <div style="margin: 0px; display: inline-block; width: 22%"><label
 	class="simple-label">收货人: </label><span id="id_receiver">{{ trade.receiver_name }}</span></div>
@@ -50,10 +49,12 @@
 <div style="margin: 0px; display: inline-block; width: 22%"><label
 	class="simple-label">邮编: </label><span id="id_zip">{{ trade.receiver_zip }}</span></div>
 </div>
-</div>
 
-<div class="row-through"><label class="simple-label">地址: </label><span id="id_address">{{ trade.receiver_state }}，{{ trade.receiver_city }}，
-{{ trade.receiver_district }}，{{ trade.receiver_address }}</span></div>
+<div class="row-through">
+<div style="margin: 0px; display: inline-block; width: 88%"><label class="simple-label">地址: </label>
+<span id="id_address">{{ trade.receiver_state }}，{{ trade.receiver_city }}，{{ trade.receiver_district }}，{{ trade.receiver_address }}</span>
+</div>
+</div>
 </div>
 <a id="collapseOne" class="goog-zippy-header goog-zippy-expanded" aria-expanded="true" style="padding: 0px 15px">修改地址››</a></div>
 <div id="addrContent" class="accordion-inner1">
