--- a/shopmanager/templates/trades/exchanges_template.html
+++ b/shopmanager/templates/trades/exchanges_template.html
@@ -15,8 +15,6 @@
     }
     body{
     	width:1000px;
-    	background-image: url({{ STATIC_URL }}img/water.jpg);
-  		background-color: #000000;
     }
     .table-bordered {
 	    border: 1px solid #DDD;
@@ -66,8 +64,16 @@
 		display:inline;
 	}
 	
+	.product-search{
+		float:left;
+	}
+	
+	.trade-search{
+		float:right;
+	}
+	
 	.content-search {
-		width:50%;
+		width:60%;
 		height:20px;
 		display:fixed;
 	}
