--- a/shopmanager/templates/items/base.html
+++ b/shopmanager/templates/items/base.html
@@ -9,5 +9,5 @@
 
 {% block preload_script %}
   <script src="{{ STATIC_URL }}script/layer/layer.js" type="text/javascript"></script>
-  <script src="{{ STATIC_URL }}script/items.js" type="text/javascript"></script>
+  <script src="{{ STATIC_URL }}script/items/productManager.js" type="text/javascript"></script>
 {% endblock %}
