--- a/shopmanager/templates/items/itemmainpage.html
+++ b/shopmanager/templates/items/itemmainpage.html
@@ -69,7 +69,7 @@
 	</td>
 	<td >
 		<div style="margin:5px;">
-			<a outer_id="{{ prod.outer_id }}" class="modify_prod" href="/items/product/update/{{ prod.outer_id }}/" target="_blank" style="display:inline;float:left;" title="修改"><i class="icon-edit"></i></a>
+			<a outer_id="{{ prod.outer_id }}" class="product_modify" target="_blank" style="display:inline;float:left;" title="修改"><i class="icon-edit"></i></a>
 			{% if prod.warn_num >= prod.collect_num and not prod.is_assign  %}<a  outer_id="{{ prod.outer_id }}" outer_sku_id="{{ sku.outer_id }}" class="stock_assign" style="display:inline;float:left;" title="库位警告，点击取消"><i class="icon-warning-sign"></i></a>{% endif %}
 			{% if prod.warn_num < prod.collect_num  %}<a outer_id="{{ prod.outer_id }}" class="sync-stock" style="display:inline;float:left;" title="同步在线库存"><i class="icon-refresh"></i></a>{% endif %}
 			{% if prod.purchase_product  %}<a  purchase_id="{{ prod.purchase_product.id }}"  class="rel_purchase" style="display:inline;float:left;" title="查看关联采购商品"><i class="icon-info-sign"></i></a>{% endif %}
@@ -117,13 +117,19 @@
  	 </form>
   </div>
 </div>
+<div id="prompt-dialog" class="prompt-dialog" ><label>数量:</label>
+	<input id="id_stock_num" type="text" style="width:40px;" />
+	<input type="radio" class="radio-mode" name="update_mode" value="1" checked/>全量
+	<input type="radio" class="radio-mode" name="update_mode" value="0" />增量
+	<button id="prompt_submit" class="btn btn-mini btn-primary">确定<button>
+</div>
 <div class="footer"></div>
 </div>
 {% endblock %}
 
 {% block delayed_script %}
   <script type="text/javascript"> 
-	
+	 new product.Manager();
   </script>
 {% endblock %}
 
