fix item views and item mainpage

--- a/shopmanager/templates/items/itemmainpage.html
+++ b/shopmanager/templates/items/itemmainpage.html
@@ -117,7 +117,7 @@
  	 </form>
   </div>
 </div>
-<div id="prompt-dialog" class="prompt-dialog" ><label>数量:</label>
+<div id="prompt-dialog" class="prompt-dialog" >
 	<input id="id_stock_num" type="text" style="width:40px;" />
 	<input type="radio" class="radio-mode" name="update_mode" value="1" checked/>全量
 	<input type="radio" class="radio-mode" name="update_mode" value="0" />增量
