--- a/shopmanager/templates/admin/trades/change_list.html
+++ b/shopmanager/templates/admin/trades/change_list.html
@@ -58,12 +58,12 @@
           {% block object-tools-items %}
             <li>
               <a href="/trades/direct/add/" class="addlink" target="_blank">
-                内售单
+                新内售单
               </a>
             </li>
             <li>
               <a href="/trades/exchange/add/" class="addlink" target="_blank">
-                退换货单
+                新退换货单
               </a>
             </li>
             <li>
