--- a/shopmanager/templates/trades/exchanges_template.html
+++ b/shopmanager/templates/trades/exchanges_template.html
@@ -131,17 +131,15 @@
 					<div id="id-return-goods">
 						<table id="id-return-table" class="table table-bordered table-striped table-condensed">
 							<thead>
-								<tr>
-									<td>编号</td>
-									<td>商家编码</td>
-									<td>商品简称</td>
-									<td>规格</td>
-									<td>数量</td>
-									<td>单价</td>
-									<td>缺货</td>
-									<td>类型</td>
-									<td>操作</td>
-								</tr>
+									<th>编号</th>
+									<th>商家编码</th>
+									<th>商品简称</th>
+									<th>规格</th>
+									<th>数量</th>
+									<th>单价</th>
+									<th>缺货</th>
+									<th>类型</th>
+									<th>操作</th>
 							</thead>
 							<tbody>
 							</tbody>
@@ -155,17 +153,15 @@
 					<div id="id-change-goods">
 						<table id="id-change-table" class="table table-bordered table-striped table-condensed">
 							<thead>
-								<tr>
-									<td>编号</td>
-									<td>商家编码</td>
-									<td>商品简称</td>
-									<td>规格</td>
-									<td>数量</td>
-									<td>单价</td>
-									<td>缺货</td>
-									<td>类型</td>
-									<td>操作</td>
-								</tr>
+									<th>编号</th>
+									<th>商家编码</th>
+									<th>商品简称</th>
+									<th>规格</th>
+									<th>数量</th>
+									<th>单价</th>
+									<th>缺货</th>
+									<th>类型</th>
+									<th>操作</th>
 							</thead>
 							<tbody>
 							</tbody>
@@ -186,15 +182,13 @@
 			<div id="id-prod-search-dialog" style="display:none;">
 				<table id="id-prod-search-table" class="table table-bordered">
 					<thead>
-						<tr>
-							<td>序号</td>
-							<td>商家编码</td>
-							<td style="width:250px;">商品简称</td>
-							<td>规格</td>
-							<td>数量</td>
-							<td>单价</td>
-							<td>操作</td>
-						</tr>
+							<th>序号</th>
+							<th>商家编码</th>
+							<th style="width:250px;">商品简称</th>
+							<th>规格</th>
+							<th>数量</th>
+							<th>单价</th>
+							<th>操作</th>
 					</thead>
 					<tbody>
 					</tbody>
@@ -203,18 +197,16 @@
 			<div id="id-trade-search-dialog" style="display:none;">
 				<table id="id-trade-search-table" class="table table-bordered">
 					<thead>
-						<tr>
-							<td>序号</td>
-							<td>买家昵称</td>
-							<td>单数</td>
-							<td>付款日期</td>
-							<td>发货日期</td>
-							<td>收货人</td>
-							<td style="width:200px;">收货地址及电话</td>
-							<td>淘宝状态</td>
-							<td>系统状态</td>
-							<td>操作</td>
-						</tr>
+							<th>序号</th>
+							<th>买家昵称</th>
+							<th>单数</th>
+							<th>付款日期</th>
+							<th>发货日期</th>
+							<th>收货人</th>
+							<th style="width:200px;">收货地址及电话</th>
+							<th>淘宝交易状态</th>
+							<th>系统状态</th>
+							<th>操作</th>
 					</thead>
 					<tbody>
 					</tbody>
